# robotica_2_2024

./: .gitignore  README.md
codigos_extras/: bash.sh  calibracion_camera.py  camera_distance.py  esp_led.py  esp_request.py  pruebas.py  take_picture.py
examen1_ws/src/custom_interface/: CMakeLists.txt  package.xml
examen1_ws/src/custom_interface/srv/: GetPosition.srv  StringService.srv
examen1_ws/src/ejercicios/: package.xml  setup.py
examen1_ws/src/ejercicios/ejercicios/: angulo_client_py.py  angulo_service.py  pub_ejer1.py  request_client.py  request_service.py
examen2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
examen2_ws/install/custom_panda/share/custom_panda/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
examen2_ws/log/: latest_build
examen2_ws/src/: .gitignore
examen2_ws/src/1er_ejercicio/: CMakeLists.txt  package.xml
examen2_ws/src/2do_ejercicio/: CMakeLists.txt  package.xml
examen2_ws/src/3er_ejercicio/: CMakeLists.txt  package.xml
examen2_ws/src/4to_ejercicio/: package.xml  setup.cfg  setup.py
examen2_ws/src/custom_panda/: .setup_assistant  CMakeLists.txt  package.xml
examen2_ws/src/custom_panda/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
examen2_ws/src/ejercicio1/: CMakeLists.txt  package.xml
examen2_ws/src/ejercicio1/src/: joint_sequence.cpp
examen2_ws/src/ejercicio2/: CMakeLists.txt
examen2_ws/src/ejercicio2/src/: movements.cpp
examen2_ws/src/ejercicio3/: CMakeLists.txt  package.xml
examen2_ws/src/ejercicio3/urdf/: ejercicio3.gv  panda.urdf
examen2_ws/src/ejercicio4/: package.xml  setup.cfg  setup.py
examen2_ws/src/ejercicio4/ejercicio4/: explorador.py
proyecto_final_ws/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data
proyecto_final_ws/src/padoru/: CMakeLists.txt  package.xml  plugin_description.xml
proyecto_final_ws/src/padoru/config/: drive_padoru.rviz  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  padoru_full.rviz  view_padoru.rviz
proyecto_final_ws/src/padoru/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
proyecto_final_ws/src/padoru/launch/: launch_robot.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
proyecto_final_ws/src/padoru/src/: DiffDriver.cpp  diff_drive_hardware.cpp
proyecto_final_ws/src/padoru/worlds/: obstacles.world
pubsub_ws/install/: local_setup.sh  setup.sh
pubsub_ws/log/: latest_build
pubsub_ws/src/myPackage/: CMakeLists.txt  package.xml
pubsub_ws/src/myPackage/src/: pub.cpp  pubsub.cpp  sub.cpp
pubsub_ws/src/py_pubsub/: setup.py
pubsub_ws/src/py_pubsub/py_pubsub/: encoder_publiser.py  pub_py.py
stage_ws/src/robot_control/: package.xml  setup.py
stage_ws/src/robot_control/robot_control/: buscador.py  read_lidar.py  run_cmd.py
vis_ws/src/panda_moveit/: .setup_assistant  package.xml
vis_ws/src/panda_moveit/config/: moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf
vis_ws/src/panda_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
vis_ws/src/robot_description/: CMakeLists.txt  package.xml
vis_ws/src/robot_description/launch/: view_robot.launch.py
vis_ws/src/robot_description/urdf/: autito.urdf  myfirst_robot.urdf  pantilt.urdf
vis_ws/src/tutorial_moveit/: CMakeLists.txt  package.xml
vis_ws/src/tutorial_moveit/src/: moveit_movimiento.cpp  moveit_sequence.cpp  obstacle_moveit.cpp
vision_ws/install/: local_setup.sh  setup.sh
vision_ws/log/: latest_build
vision_ws/src/camera_vision/: package.xml  setup.py
vision_ws/src/camera_vision/camera_vision/: ArucoDistanceEstimator.py  examen_3.py  principal.py  read_camera.py
vision_ws/src/camera_vision/launch/: examen_3.launch.py
vision_ws/src/custom_msgs/: CMakeLists.txt  package.xml
(+84 files in other folders)
